update: brand(text) & colors customization

--- a/app/javascript/styles/contrast/variables.scss
+++ b/app/javascript/styles/contrast/variables.scss
@@ -1,7 +1,7 @@
 // Dependent colors
 $black: #000000;
 
-$classic-base-color: #282c37;
+$classic-base-color: #36454f;
 $classic-primary-color: #9baec8;
 $classic-secondary-color: #d9e1e8;
 $classic-highlight-color: #2b90d9;
